--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta charset="utf-8">
-    <title>Random Quote Generator</title>
+    <title>Tanya-isms!A Random Quote Generator</title>
   </head>
   <body>
+    <div class="container">
+        <h1>Terribly Terrific Tanya-Isms! A Random Quote Generator</h1>
+          <div class="quoteText">
+            <div id="quoteDisplay"></div>
+          </div>
+          <button onclick="newQuote()">New Quote</button>
+    </div>
+
+      <script type=text/javascript src="js/primary.js"></script>
 
   </body>
 </html>
